	- subs could not only list 'Inherited from', but also 'Extended by'
	- in POD, group "Inherited" referenced subs?

version 3.05:

	Fixes:
	- do not check loadable Pod2: needs optional Template/Magic
	  [Slaven Rezic] cpantesters, rt.cpan.org #169881

	Improvements:
	- example header formatting
	- error option without default
	- add bugtracker to merge3
	- add runtime/requires to merge3

version 3.04: Fri 12 Sep 13:58:58 CEST 2025

	Changes:
	- HTML show structural examples before subs

	Fixes:
	- fix split skip_links
	- fix warning message with an option uses non-existing P
	- fix cleanup in HTML
	- fix utf8 problems
	- html cleanup structure headers

	Improvements:
	- html output support numbered items.
	- html chapters/sections/subsection numbered by default

version 3.03: Mon  8 Sep 12:57:12 CEST 2025

	Changes:
	- documentation tree now in OODoc::Index, not global.
	- manual->index became manual->overview.

	Fixes:
	- html template: functions not shown alphabetically.
	- html link to specific options

	Improvements:
	- warning in addSubroutine()
	- display of ties and overload in both POD and HTML
	- add OODoc::Examples for Markov parser
	- pod diagnostics show which function produces them.
	- subsubsection is h5 in html
	- publicationIndex() hidden

version 3.02: Fri 15 Aug 14:52:20 CEST 2025

	Fixes:
	- option default now in auto-PMC scheme.

	Improvements:
	- oorestyle remove C<> and M<> where not needed.
	- oorestyle default [] and {}
	- apply oorestyle to OODoc
	- remove "Commonly used functions" section
	- html display of diagnostics
	- export inheritance structure

version 3.01: Thu 14 Aug 11:14:20 CEST 2025

	Changes:
	- $doc->prepare() becomes $doc->finalize()

	Fixes:
	- parser html accept C<<...>> syntax
	- parser html accept S<>, X<>, and Z<>
	- parser F<url> must be L<url>
	- parser F<> in italic

	Improvements:
	- parser add markup P<>
	- parser more documentation
	- link to metacpan.org, not search.cpan.org