@@ -128,6 +128,8 @@ sub container(;$)
 	@_ ? ($self->{OT_container} = shift) : $self->{OT_container};
 }
 
+sub manual(;$) { $_[0]->container->manual }
+
 =method linenr
 =cut
 
@@ -143,19 +145,10 @@ sub where()
 	( $self->manual->source, $self->linenr );
 }
 
-=method manual
-The manual of the text object is returned.
-=cut
-
-sub manual(;$)
-{	my $self = shift;
-	$self->container->manual;
-}
-
 =method extends [$object]
 Close to all elements used within OODoc can have an inheritance relation.
 The returned object is extended by the current object.  Multiple inheritance
-is not supported here.
+is not supported here (yet).
 =cut
 
 sub extends(;$)
@@ -179,7 +172,7 @@ this object.
 
 =cut
 
-sub openDescription() { \shift->{OT_descr} }
+sub openDescription() { \($_[0]->{OT_descr}) }
 
 =method findDescriptionObject
 From the current object, search in the extends until an object is found
@@ -214,23 +207,34 @@ sub examples() { @{ $_[0]->{OT_examples}} }
 
 sub publish($%)
 {	my ($self, $args) = @_;
-	my $exporter = $args->{exporter} or panic;
-	my $manual   = $args->{manual}   or panic;
+	my $exporter   = $args->{exporter} or panic;
+	my $manual     = $args->{manual}   or panic;
+	my $inherited  = $manual->inherited($self);
 
 	my $p = $self->SUPER::publish($args);
-	$p->{type}      = $exporter->markup(lc $self->type);
-	$p->{inherited} = $exporter->boolean($manual->inherited($self));
+	$p->{type}     = $exporter->markup(lc $self->type);
 
-	if(my $name  = $self->name)
+	if(my $name = $self->name)
 	{	$p->{name} = $exporter->markupString($name);
 	}
 
-	my $descr    = $self->description // '';
+	my $descr;
+	if($inherited)
+	{	# This node has nothing extra wrt its base implementation
+		$descr    = 'Inherited, see M<'. $exporter->referTo($manual, $self).'>';
+		$p->{extends}  = $self->unique;
+	}
+	else
+	{	$descr    = $self->description // '';
+
+		# Any kind of text can contain examples
+		my @e     = map $_->publish($args)->{id}, $self->examples;
+		$p->{examples} = \@e if @e;
+	}
+
 	$p->{intro}  = $exporter->markupBlock($descr)
 		if length $descr;
 
-	my @e        = map $_->publish($args)->{id}, $self->examples;
-	$p->{examples} = \@e if @e;
 	$p;
 }
 
